Fix #573: Stars broken in new tables

--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -438,11 +438,11 @@ table thead tr th.mymarkets-header {
 }
 
 .gold-star > svg > path {
-  fill: #CC9F00;
+  fill: #CC9F00 !important;
 }
 
 .grey-star > svg > path {
-  fill: #878787;
+  fill: #878787 !important;
 }
 
 .shuffle > svg > path {
